# astro-tauri-salable

./: .env.example  .gitignore  CHANGELOG.md  README.md  SALABLE_API_SPEC.json  SALABLE_BETA_CLIENT_AGENT.md  astro.config.mjs  package-lock.json  package.json  salable-product-config.json  tsconfig.json
docs/: SALABLE_GRANTEES_AND_GROUPS.md  SALABLE_WEBHOOKS.md
scripts/: tauri-headless.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Dashboard.tsx  FeatureGate.tsx  LandingPage.tsx  LicenseStatus.tsx  OpenCodeFiles.tsx  PricingPage.tsx  UserPrompt.tsx
src/layouts/: Layout.astro
src/lib/: salable.ts  tauri.ts  user.ts
src/pages/: files.astro  index.astro  pricing.astro  success.astro
src/pages/api/: checkout.json.ts  health.json.ts
src/pages/api/entitlements/: check.json.ts
src/pages/api/opencode/: files.json.ts  status.json.ts
src/pages/api/user/: status.json.ts
src/styles/: global.css
src/types/: salable.ts
